[package]
name = "client_bridge_template"
version = "0.1.0"
edition = "2021"

[dependencies]
make87 = "*"
make87_messages = ">=0.1.0"
ros2-client = "0.7.6"
ros2-interfaces-rolling = { version = "*", features = ["example_interfaces"] }
tokio = "1.40.0"
uuid = "1.11.0"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true
opt-level = "z" # Optimize for size.
codegen-units = 1 # Enable for further build optimizations at the cost of no parallelism
